packages/kotlin/ttrp-frontend/src/test/resources/expr/negative/fn-001.expr
mean(amount)
# expect: TTRP-FN-001
